--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+}
+
+
+:root {
+    --font-primary: "Baloo Da 2", serif;
+    --font-secundary: "Josefin Slab", serif;
+    --font-action: "Mulish", serif;
 }
 
 header {
@@ -10,6 +18,45 @@ header {
     background-color: rgba(0,0,0,.8);
     overflow: hidden;
     position: relative;
+}
+
+.hamburguer {
+
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    z-index: 100;
+    right: 2rem;
+    top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    cursor: pointer;
+    transition: right 1.1s;
+}
+
+.show-menu .hamburguer {
+    right: 16rem;
+}
+
+.lines{
+    width: 100%;
+    height: .1rem;
+    background-color: #fff;
+    box-shadow: .1rem .1rem 1px black;;
+    transition: transform 1s;
+}
+.show-menu #line-a {
+    transform: rotate(42deg) translate(.3rem, .45rem);
+}
+
+.show-menu #line-b {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.show-menu #line-c {
+    transform: rotate(-45deg) translate(.2rem, -.45rem);
 }
 
 .img-wrapper {
@@ -45,7 +92,7 @@ header {
 .banner h1 {
     color: white;
     font-size: 3.5rem;
-    font-family: "Baloo Da 2", serif;
+    font-family: var(--font-primary);
     font-weight: 200;
     text-shadow: .3rem .2rem 2px rgba(0,0,0,.8);
     letter-spacing: .4rem;
@@ -56,7 +103,7 @@ header {
 .banner p {
     color:honeydew;
     font-size: 2rem;
-    font-family: "Josefin Slab", serif;
+    font-family: var(--font-secundary);
     font-weight: 600;
     text-shadow: .3rem .2rem 1px black;
     letter-spacing: .1rem;
@@ -66,7 +113,7 @@ header {
 }
 
 .banner button {
-    font-family: "Mulish", serif;
+    font-family: var(--font-action);
     color: black;
     background: #56ab2f;  
     background: linear-gradient(to right, #a8e063, #56ab2f); 
@@ -97,3 +144,68 @@ header {
         opacity: 1;
     }
 }
+
+.sidebar {
+    background: white;
+    width: 20rem;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: -20rem;
+    opacity: .7;
+    transition: all 1s;
+}
+
+.show-menu .sidebar {
+    right: 0;
+}
+
+.menu {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.menu-item {
+    text-align:center;
+    margin-bottom: .5rem;
+}
+
+.menu-link {
+    font-family: var(--font-action);
+    font-size: 1.77rem;
+    color:black;
+    transition: color 1s;
+    cursor: pointer;
+}
+
+.menu-link:hover {
+    color:#56ab2f;
+}
+
+.social-media {
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.social-media i {
+    color:#56ab2f;
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.social-media i:hover {
+    background-color:#a8e063;
+}
+
+
+  
